--- a/resources/views/about.html
+++ b/resources/views/about.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/house-icon-png-white-32.png" rel="icon">
-  <link href="assets/img/house-icon-png-white-32.png" rel="apple-touch-icon">
+  <link href="/public/assets/img/house icon,png" rel="icon">
+  <link href="/public/assets/img/house icon,png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,14 +19,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/public/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/public/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/public/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="/public/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="/public/assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!--  Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="/public/assets/css/main.css" rel="stylesheet">
 
 </head>
 
@@ -36,16 +36,16 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="{{ route('index') }}" class="logo d-flex align-items-center  me-auto me-lg-0">
+      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
         <h1>PortFolio</h1>
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-            <li><a href="{{ route('index') }}" class="active">Home</a></li>
-            <li><a href="{{ route('about') }}">About</a></li>
-            <li><a href="{{ route('services') }}">Services</a></li>
-            <li><a href="{{ route('contact') }}">Contact</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li> 
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -71,7 +71,7 @@
             <h2>About</h2>
             <p>Hello, I'm Sam, a web developer with expertise in front-end development using HTML, CSS, and JavaScript. I have a portfolio of projects that highlight my ability to create visually appealing and user-friendly interfaces.</p>
 
-            <a class="cta-btn" href="{{ route('contact') }}">Available for hire</a>
+            <a class="cta-btn" href="contact.html">Available for hire</a>
           </div>
         </div>
       </div>
@@ -83,7 +83,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/about me img/About.jpg" class="img-fluid" alt="">
+            <img src="/public/assets/img/about me img/About.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 content">
             <h2>Web Developer Based in Egypt</h2>
@@ -139,7 +139,7 @@
                   "Sam's problem-solving abilities are beyond extraordinary. When confronted with a bug or a system issue, they turn into a relentless detective, leaving no stone unturned until they discover the root cause and devise a solution. Besides their technical talents, Sam has a talent for leadership. They inspire and motivate their team members to go above and beyond, creating a cohesive and high-achieving group."
                 </p>
                 <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                  <img src="/public/assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
                   <h3>Saul Goodman</h3>
                   <h4>Ceo &amp; Founder</h4>
                 </div>
@@ -155,7 +155,7 @@
                   "When it comes to working with Sam, it's like having a technical wizard and a creative genius all in one! Their problem-solving skills are unparalleled, and they have an uncanny ability to turn complex concepts into elegant solutions. Working with Sam has been an absolute pleasure, and their dedication to delivering high-quality results is commendable. 5 out of 5 stars!"
                 </p>
                 <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/person2.jpg" class="testimonial-img" alt="">
+                  <img src="/public/assets/img/testimonials/person2.jpg" class="testimonial-img" alt="">
                   <h3>Sara Wilsson</h3>
                   <h4>Designer</h4>
                 </div>
@@ -171,7 +171,7 @@
                   "Sam is not just a skilled developer; they are a great communicator too! They took the time to understand our requirements thoroughly, and their regular updates kept us informed throughout the project. Sam's professionalism and commitment to deadlines are remarkable. It's rare to find someone who is both technically proficient and great at client interaction. We are incredibly satisfied with their work. 5 out of 5 stars!"
                 </p>
                 <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                  <img src="/public/assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                   <h3>Jena Karlis</h3>
                   <h4>Store Owner</h4>
                 </div>
@@ -187,7 +187,7 @@
                   "I have had the privilege of collaborating with Sam on several projects, and each experience has exceeded my expectations. They have an exceptional ability to grasp the bigger picture while paying attention to the smallest details. Sam's positive attitude and adaptability to new challenges make them a true asset to any team. Working with Sam has undoubtedly elevated our project outcomes. 5 out of 5 stars!"
                 </p>
                 <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+                  <img src="/public/assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                   <h3>Matt Brandon</h3>
                   <h4>Freelancer</h4>
                 </div>
@@ -203,7 +203,7 @@
                   "Sam's passion for continuous learning is truly admirable. They stay updated with the latest trends in technology and are never afraid to explore new tools and frameworks. What sets Sam apart is their ability to think outside the box and come up with innovative solutions. It's no surprise that their work is highly sought after. 5 out of 5 stars!"
                 </p>
                 <div class="profile mt-auto">
-                  <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+                  <img src="/public/assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                   <h3>John Larson</h3>
                   <h4>Entrepreneur</h4>
                 </div>
@@ -238,14 +238,14 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="{{ asset('assets/vendor/php-email-form/validate.js') }}"></script>
+  <script src="/public/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/public/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/public/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="/public/assets/vendor/aos/aos.js"></script>
+  <script src="/public/assets/vendor/php-email-form/validate.js"></script>
 
   <!--  Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="/public/assets/js/main.js"></script>
 
 </body>
 
