--- a/resources/views/rumouz.html
+++ b/resources/views/rumouz.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{{ asset('assets/img/house-icon-png-white-32.png') }}" rel="icon">
-  <link href="{{ asset('assets/img/house-icon-png-white-32.png') }}" rel="apple-touch-icon">
+  <link href="/public\assets\img\house icon.png" rel="icon">
+  <link href="/public\assets\img\house icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,14 +19,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-    <link href="{{ asset('assets/vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
-    <link href="a{{ asset('assets/vendor/bootstrap-icons/bootstrap-icons.css') }}" rel="stylesheet">
-    <link href="{{ asset('assets/vendor/swiper/swiper-bundle.min.css') }}" rel="stylesheet">
-    <link href="{{ asset('assets/vendor/glightbox/css/glightbox.min.css') }}" rel="stylesheet">
-    <link href="{{ asset('assets/vendor/aos/aos.css') }}" rel="stylesheet">
+    <link href="/public/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/public/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="/public/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="/public/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="/public/assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!--  Main CSS File -->
-  <link href="{{ asset('assets/css/rumouz.css') }}" rel="stylesheet">
+  <link href="/public/assets/css/rumouz.css" rel="stylesheet">
 
 </head>
 
@@ -36,16 +36,16 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="{{ route('index') }}" class="logo d-flex align-items-center  me-auto me-lg-0">
+      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
         <h1>PortFolio</h1>
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-            <li><a href="{{ route('index') }}" class="active">Home</a></li>
-            <li><a href="{{ route('about') }}">About</a></li>
-            <li><a href="{{ route('services') }}">Services</a></li>
-            <li><a href="{{ route('contact') }}">Contact</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li> 
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -72,7 +72,7 @@
             <h3>Rumouz</h3>
             <p>Today, I am thrilled to share with you my latest project called Rumouz an innovative educational platform designed to make learning accessible and engaging.</p>
 
-            <a class="cta-btn" href="{{ route('contact') }}">Available for hire</a>
+            <a class="cta-btn" href="contact.html">Available for hire</a>
 
           </div>
         </div>
@@ -88,22 +88,22 @@
             <div class="swiper-wrapper align-items-center">
 
               <div class="swiper-slide">
-                <img src="{{ asset('assets/img/Rumouz/Working.jpg') }}" alt="">
+                <img src="/public/assets/img/Rumouz/Working.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="{{ asset('assets/img/Rumouz/Coding.jpg') }}" alt="">
+                <img src="/public/assets/img/Rumouz/Coding.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="{{ asset('assets/img/Rumouz/Rumouz1.jpg') }}" alt="">
+                <img src="/public/assets/img/Rumouz/Rumouz1.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="{{ asset('assets/img/Rumouz/Rumouz2.jpg') }}" alt="">
+                <img src="/public/assets/img/Rumouz/Rumouz2.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="{{ asset('assets/img/Rumouz/rumouz4.png') }}" alt="">
+                <img src="/public/assets/img/Rumouz/rumouz4.png" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="{{ asset('assets/img/Rumouz/Coding1.jpg') }}" alt="">
+                <img src="/public/assets/img/Rumouz/Coding1.jpg" alt="">
               </div>
 
             </div>
@@ -143,7 +143,7 @@
                   <i class="bi bi-quote quote-icon-left"></i>
                   Rumouz: Unlocking the Power of Knowledge. Empowering minds, inspiring growth, and shaping futures. Education made accessible, interactive, and transformative."
                   <div>
-                  <img src="{{ asset('assets/img/Rumouz/dark_person.jpg') }}" class="testimonial-img" alt="">
+                  <img src="/public/assets/img/Rumouz/dark_person.jpg" class="testimonial-img" alt="">
                   <h3>Sam</h3>
                   <h4>Web Developer</h4>
                 </div>
@@ -196,14 +196,14 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="{{ asset('assets/vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
-  <script src="{{ asset('assets/vendor/swiper/swiper-bundle.min.js') }}"></script>
-  <script src="{{ asset('assets/vendor/glightbox/js/glightbox.min.js') }}"></script>
-  <script src="{{ asset('assets/vendor/aos/aos.js') }}"></script>
-  <script src="{{ asset('assets/vendor/php-email-form/validate.js') }}"></script>
+  <script src="/public/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/public/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/public/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="/public/assets/vendor/aos/aos.js"></script>
+  <script src="/public/assets/vendor/php-email-form/validate.js"></script>
 
   <!--  Main JS File -->
-  <script src="{{ asset('assets/js/main.js') }}"></script>
+  <script src="/public/assets/js/main.js"></script>
 
 </body>
 
