--- a/resources/views/Development.html
+++ b/resources/views/Development.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/house-icon-png-white-32.png" rel="icon">
-  <link href="assets/img/house-icon-png-white-32.png" rel="apple-touch-icon">
+  <link href="/public/assets/img/house icon.png" rel="icon">
+  <link href="/public/assets/img/house icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,14 +19,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="/public/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/public/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="/public/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="/public/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="/public/assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!--  Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="/public/assets/css/style.css" rel="stylesheet">
 
 </head>
 
@@ -36,16 +36,16 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="{{ route('index') }}" class="logo d-flex align-items-center  me-auto me-lg-0">
+      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
         <h1>PortFolio</h1>
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-            <li><a href="{{ route('index') }}" class="active">Home</a></li>
-            <li><a href="{{ route('about') }}">About</a></li>
-            <li><a href="{{ route('services') }}">Services</a></li>
-            <li><a href="{{ route('contact') }}">Contact</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -72,7 +72,7 @@
             <p>This like a introductionon programming in front-end and back-end development.
                 Today, we'll explore the roles of developers and their responsibilities in these domains.</p>
 
-            <a class="cta-btn" href="{{ route('contact') }}">Available for hire</a>
+            <a class="cta-btn" href="contact.html">Available for hire</a>
 
           </div>
         </div>
@@ -88,22 +88,22 @@
             <div class="swiper-wrapper align-items-center">
 
               <div class="swiper-slide">
-                <img src="assets/img/Development/Coding2.jpg" alt="">
+                <img src="/public/assets/img/Development/Coding2.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/Development/Programming.jpg" alt="">
+                <img src="/public/assets/img/Development/Programming.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/Development/Wroking.jpg" alt="">
+                <img src="/public/assets/img/Development/Wroking.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/Development/Coding.jpg" alt="">
+                <img src="/public/assets/img/Development/Coding.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/Development/Laptop.jpg" alt="">
+                <img src="/public/assets/img/Development/Laptop.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/Development/Laptop2.jpg" alt="">
+                <img src="/public/assets/img/Development/Laptop2.jpg" alt="">
               </div>
 
             </div>
@@ -137,7 +137,7 @@
                   Adam: Variables: "Variables are like containers to store data, and they can change as the program runs."
                   Adam: Conditional Statements: "With conditionals, you can make decisions in your code, like 'if this happens, then do that.'"</p>
                 <div>
-                  <img src="assets/img/Development/Steve Jobs.jpg" class="testimonial-img" alt="">
+                  <img src="/public/assets/img/Development/Steve Jobs.jpg" class="testimonial-img" alt="">
                   <h3>Sam</h3>
                   <h4>Developer</h4>
                 </div>
@@ -191,14 +191,14 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="{{ asset('assets/vendor/php-email-form/validate.js') }}"></script>
+  <script src="/public/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/public/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/public/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="/public/assets/vendor/aos/aos.js"></script>
+  <script src="/public/assets/vendor/php-email-form/validate.js"></script>
 
   <!--  Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="/public/assets/js/main.js"></script>
 
 </body>
 
