--- a/resources/views/cali.html
+++ b/resources/views/cali.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/house-icon-png-white-32.png" rel="icon">
-  <link href="assets/img/house-icon-png-white-32.png" rel="apple-touch-icon">
+  <link href="/public/assets/img/house icon,png" rel="icon">
+  <link href="/public/assets/img/house icon,png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!--  Main CSS File -->
-  <link href="assets/css/cali.css" rel="stylesheet">
+  <link href="/public/assets/css/cali.css" rel="stylesheet">
 
 </head>
 
@@ -36,16 +36,16 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="{{ route('index') }}" class="logo d-flex align-items-center  me-auto me-lg-0">
+      <a href="index.html" class="logo d-flex align-items-center  me-auto me-lg-0">
         <h1>PortFolio</h1>
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-            <li><a href="{{ route('index') }}" class="active">Home</a></li>
-            <li><a href="{{ route('about') }}">About</a></li>
-            <li><a href="{{ route('services') }}">Services</a></li>
-            <li><a href="{{ route('contact') }}">Contact</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav><!-- .navbar -->
 
@@ -71,7 +71,7 @@
             <h2>Cali Technology Solutions</h2>
             <p>Cali Technology Solutions is a company located in Jordan and Saudi Arabia and United Arab Emirates, that specialized in linking Artificial Intelligence with Architecture specially and Engineering generally to increase the accuracy with the highest quality and shortened time estimation.</p>
 
-            <a class="cta-btn" href="{{ route('contact') }}">Available for hire</a>
+            <a class="cta-btn" href="contact.html">Available for hire</a>
 
           </div>
         </div>
@@ -87,22 +87,22 @@
             <div class="swiper-wrapper align-items-center">
 
               <div class="swiper-slide">
-                <img src="assets/img/Cali/cali.jpg" alt="">
+                <img src="/public/assets/img/Cali/cali.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/Cali/cali1.webp" alt="">
+                <img src="/public/assets/img/Cali/cali1.webp" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/Cali/cali2.webp" alt="">
+                <img src="/public/assets/img/Cali/cali2.webp" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/Cali/Coding2.jpg" alt="">
+                <img src="/public/assets/img/Cali/Coding2.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/Cali/TeamWork.jpg" alt="">
+                <img src="/public/assets/img/Cali/TeamWork.jpg" alt="">
               </div>
               <div class="swiper-slide">
-                <img src="assets/img/Cali/coding.jpg" alt="">
+                <img src="/public/assets/img/Cali/coding.jpg" alt="">
               </div>
 
             </div>
@@ -130,7 +130,7 @@
                   <i class="bi bi-quote quote-icon-left"></i>
                   "I've had the privilege of working at Cali Technology Solutions, and I can confidently say that it's a company that truly stands out in the tech industry. From the moment I joined, I felt welcomed into a vibrant and dynamic team that is passionate about making a difference through technology.</p>
                 <div>
-                  <img src="assets/img/Cali/dark_person.jpg" class="testimonial-img" alt="">
+                  <img src="/public/assets/img/Cali/dark_person.jpg" class="testimonial-img" alt="">
                   <h3>Sam</h3>
                   <h4>Developer at Cali</h4>
                 </div>
@@ -185,14 +185,14 @@
   </div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="{{ asset('assets/vendor/php-email-form/validate.js') }}"></script>
+  <script src="/public/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="/public/assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="/public/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="/public/assets/vendor/aos/aos.js"></script>
+  <script src="/public/assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="/public/assets/js/main.js"></script>
 
 </body>
 
